kdemultimedia (4:4.6.1-0r1) UNRELEASED; urgency=low

  * New upstream release.
  * Update installed files.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.

  [ George Kiagiadakis ]
  * Change my email address in uploaders.
  * Bump kdelibs5-dev build dependency to version 4:4.6.
  * Drop patch 02_colin_guthrie_pulseaudio_fixes.diff, applied upstream.
  * Add build dependencies to libavcodec-dev, libswscale-dev and
    libavformat-dev to build the ffmpeg thumbnailer plugin.
  * Add new package: ffmpegthumbs.
  * Update libkcddb4.symbols.

  [ José Manuel Santamaría Lema ]
  * Add debian/not-installed file.
  * Build depend on libmusicbrainz3-dev instead of libmusicbrainz4-dev.
  * Bump kde-sc-dev-latest build dependency to 4:4.6.1.
  * Bump S-V to 3.9.1; add Breaks next to Replaces where needed.
  * Add debian/kdemultimedia-kio-plugins.lintian-overrides.
  * Add myself to Uploaders.

  [ Pino Toscano ]
  * Use wildcard architectures:
    - !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386 -> linux-any
  * Tighten the libpulse-dev build-dendency to the version required upstream.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 29 Aug 2010 13:26:59 +0300

kdemultimedia (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update descriptions

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 12:25:35 +0200

kdemultimedia (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Limit dh_xine call to dragonplayer package.
  * Do not fail if there are missing symbols. libkcddb4 is not important enough
    to warrant such a FTBFS.
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.